--- a/lab3/lab3.ioc
+++ b/lab3/lab3.ioc
@@ -14,20 +14,26 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA5
-Mcu.Pin1=PA6
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PA7
-Mcu.Pin3=PB0
-Mcu.Pin4=PB1
-Mcu.Pin5=PB2
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=13
+Mcu.Pin0=PA3
+Mcu.Pin1=PA5
+Mcu.Pin10=PA11
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA6
+Mcu.Pin3=PA7
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PB2
+Mcu.Pin7=PA8
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -45,53 +51,74 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=PIN5
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=BTN2
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
-PA10.Signal=GPIO_Output
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=PIN6
+PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=BTN3
+PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
-PA11.Signal=GPIO_Output
+PA11.Signal=GPIO_Input
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA3.GPIO_Label=LED
+PA3.GPIO_PuPd=GPIO_NOPULL
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=PIN0
+PA5.GPIO_Label=en0
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=PIN1
+PA6.GPIO_Label=en1
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=PIN2
+PA7.GPIO_Label=en2
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=PIN3
+PA8.GPIO_Label=en3
 PA8.Locked=true
 PA8.Signal=GPIO_Output
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=PIN4
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA9.GPIO_Label=BTN1
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
-PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB0.GPIO_Label=BTN1
-PB0.GPIO_PuPd=GPIO_PULLUP
+PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=seg0
 PB0.Locked=true
-PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB1.GPIO_Label=BTN2
-PB1.GPIO_PuPd=GPIO_PULLUP
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=seg1
 PB1.Locked=true
-PB1.Signal=GPIO_Input
-PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB2.GPIO_Label=BTN3
-PB2.GPIO_PuPd=GPIO_PULLUP
+PB1.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=seg2
 PB2.Locked=true
-PB2.Signal=GPIO_Input
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=seg3
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=seg4
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=seg5
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=seg6
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -134,6 +161,8 @@ RCC.TimSysFreq_Value=8000000
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=9
 TIM2.Prescaler=7999
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
